<resources>
    <string name="app_name">Students</string>

    <string name="groups_label">Group</string>
    <string name="student_details_label">Student details</string>
    <string name="update_student_profile_label">Update student profile</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_full_name">Full name</string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="second_name">Second name</string>
    <string name="group">Group</string>

    <string name="groups">Groups</string>
    <string name="students">Students</string>
    <string name="journals">Journals</string>
    <string name="lessons">Lessons</string>

    <string name="add_lesson">Add lesson</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="submit">Submit</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contacts">Contacts</string>
    <string name="journal">Journal</string>
</resources>
