<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.course.innopolis.students.View.Admin.AdminActivity">

    <Button
        android:id="@+id/groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDarkSB"
        android:text="@string/groups" />

    <Button
        android:id="@+id/students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDarkSB"
        android:text="@string/students" />

    <Button
        android:id="@+id/journals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDarkSB"
        android:text="@string/journals" />

    <Button
        android:id="@+id/lessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDarkSB"
        android:text="@string/lessons" />

</LinearLayout>